# algo-plugins

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
plugins/roifilter/: CMakeLists.txt
plugins/roifilter/src/: roi_filter_plugin.cpp
